# DepthGradientGroundSegmenter

./: CMakeLists.txt  README.md  package.xml
app/: segmenter_test.cpp
include/ground_segmenter/: ground_segmenter.h  ground_segmenter.tpp
